@@ -24,9 +24,9 @@ requires 'Dicom::File::Detect' => 0.03;
 requires 'Dicom::UID::Generator' => 0.01;
 requires 'File::Find::Rule::Dicom' => 0.04;
 requires 'perl' => '5.6.0';
-resources 'bugtracker' => 'https://github.com/tupinek/Task-Dicom/issues';
-resources 'homepage' => 'https://github.com/tupinek/Task-Dicom';
-resources 'repository' => 'git://github.com/tupinek/Task-Dicom';
+resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Task-Dicom/issues';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Task-Dicom';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Task-Dicom';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
