@@ -39,7 +39,7 @@ SEE ALSO
         Common rules for searching for DICOM things.
 
 REPOSITORY
-    <https://github.com/tupinek/Task-Dicom>
+    <https://github.com/michal-josef-spacek/Task-Dicom>
 
 AUTHOR
     Michal Špaček <mailto:skim@cpan.org>
