@@ -2,6 +2,7 @@
  - Fix Makefile.PL fails with no '.' in @INC.
  - Move bugtracker to github.
  - Update Module::Install to 1.21 version.
+ - Update author github username.
 
 0.07 2016-08-25T11:30:29+02:00
  - Add Dicom::UID::Generator in 0.01 version.
